--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# ||||| Android |||||
+
 # built application files
 *.apk
 *.ap_
@@ -14,3 +16,25 @@ gen/
 
 # Local configuration file (sdk path, etc)
 local.properties
+
+# ||||| Java - Play framework |||||
+
+target/
+logs/
+repository/
+dist/
+*.lock
+.DS_Store
+project/boot/
+framework/project/boot/
+documentation/api
+workspace/
+framework/sbt/boot
+.history
+.idea
+.classpath
+.project
+.settings/
+.target/
+.cache
+*.iml
